finished entangler part for H4 and produced a circuit. still computing LiH Hamiltonian

--- a/Project_2_VQE_Molecules/H4_complete.ipynb
+++ b/Project_2_VQE_Molecules/H4_complete.ipynb
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -675,13 +675,6 @@
      "output_type": "stream",
      "text": [
       "entanglers [1.0 [X2 Y3 X6 X7]]\n",
-      "ent: 1.0 [X2 Y3 X6 X7]\n",
-      "<class 'openfermion.ops._qubit_operator.QubitOperator'>\n",
-      "('X', 'Y', 'Z')\n",
-      "<bound method QubitOperator._simplify of 1.0 [X2 Y3 X6 X7]>\n",
-      "string: 1.0 [X2 Y3 X6 X7]\n",
-      "b: X2 Y3 X6 X7\n",
-      "c: ['X2', 'Y3', 'X6', 'X7']\n",
       "circuit: \n",
       "Rx(target=(0,), parameter=beta_0)\n",
       "Rz(target=(0,), parameter=gamma_0)\n",
@@ -699,7 +692,7 @@
       "Rz(target=(6,), parameter=gamma_6)\n",
       "Rx(target=(7,), parameter=beta_7)\n",
       "Rz(target=(7,), parameter=gamma_7)\n",
-      "Exp-Pauli(target=('X', 'Y'), control=(), parameter=tau_0, paulistring=7(X)3(Y))\n",
+      "Exp-Pauli(target=(2, 3, 6, 7), control=(), parameter=tau_0, paulistring=X(2)Y(3)X(6)X(7))\n",
       "\n"
      ]
     }
@@ -710,40 +703,86 @@
     "\n",
     "a = tq.Variable(\"tau_0\")\n",
     "U = construct_QMF_ansatz(8)\n",
-    "for ent in entanglers:\n",
-    "    print(\"ent:\", ent)\n",
-    "    print(type(ent))\n",
-    "    print(ent.action_strings)\n",
-    "    print(ent._simplify)\n",
-    "    s = str(ent)\n",
-    "    print(\"string:\", str(ent))\n",
-    "    b = s[5:-1]\n",
-    "    print(\"b:\", b)\n",
-    "    c = b.split(\" \")\n",
-    "    print(\"c:\", c)\n",
-    "    #print(ent.action_strings())\n",
-    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_openfermion(c), angle=a)\n",
+    "#hardcoding the entanglers\n",
+    "U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(\"X(2)Y(3)X(6)X(7)\"), angle=a)\n",
     "print(U)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-99-2dcdec070302>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#draw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcirc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcircuit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompiler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile_exponential_pauli_gate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcirc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbackend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"qiskit\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/tequila3/tequila/src/tequila/simulators/simulator_api.py\u001b[0m in \u001b[0;36mdraw\u001b[0;34m(objective, variables, backend)\u001b[0m\n\u001b[1;32m    421\u001b[0m             \u001b[0mvariables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mformat_variable_dictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvariables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    422\u001b[0m             compiled = compile_circuit(abstract_circuit=objective, backend=backend,\n\u001b[0;32m--> 423\u001b[0;31m                                        variables=variables)\n\u001b[0m\u001b[1;32m    424\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompiled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcircuit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/tequila3/tequila/src/tequila/simulators/simulator_api.py\u001b[0m in \u001b[0;36mcompile_circuit\u001b[0;34m(abstract_circuit, variables, backend, samples, noise, device, *args, **kwargs)\u001b[0m\n\u001b[1;32m    325\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mabstract_circuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 327\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mCircType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabstract_circuit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mabstract_circuit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvariables\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvariables\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoise\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnoise\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    328\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    329\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/tequila3/tequila/src/tequila/simulators/simulator_qiskit.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, abstract_circuit, variables, use_mapping, noise, device, *args, **kwargs)\u001b[0m\n\u001b[1;32m    162\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0muse_mapping\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 164\u001b[0;31m             \u001b[0mqubits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mabstract_circuit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqubits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    165\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m             \u001b[0mqubits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabstract_circuit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_qubits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/tequila3/tequila/src/tequila/circuit/circuit.py\u001b[0m in \u001b[0;36mqubits\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgates\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m             \u001b[0maccumulate\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqubits\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccumulate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      ┌────────────────────┐┌─────────────────────┐                            »\n",
+      "q_0: ─┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├────────────────────────────»\n",
+      "      ├────────────────────┤├─────────────────────┤                            »\n",
+      "q_1: ─┤ RX(f((beta_1,))_2) ├┤ RZ(f((gamma_1,))_3) ├────────────────────────────»\n",
+      "      ├────────────────────┤├─────────────────────┤    ┌───┐                   »\n",
+      "q_2: ─┤ RX(f((beta_2,))_4) ├┤ RZ(f((gamma_2,))_5) ├────┤ H ├──────■────────────»\n",
+      "      ├────────────────────┤├─────────────────────┤ ┌──┴───┴───┐┌─┴─┐          »\n",
+      "q_3: ─┤ RX(f((beta_3,))_6) ├┤ RZ(f((gamma_3,))_7) ├─┤ RX(pi/2) ├┤ X ├──■───────»\n",
+      "      ├────────────────────┤├─────────────────────┤ └──────────┘└───┘  │       »\n",
+      "q_4: ─┤ RX(f((beta_4,))_8) ├┤ RZ(f((gamma_4,))_9) ├────────────────────┼───────»\n",
+      "     ┌┴────────────────────┤├─────────────────────┴┐                   │       »\n",
+      "q_5: ┤ RX(f((beta_5,))_10) ├┤ RZ(f((gamma_5,))_11) ├───────────────────┼───────»\n",
+      "     ├─────────────────────┤├──────────────────────┤   ┌───┐         ┌─┴─┐     »\n",
+      "q_6: ┤ RX(f((beta_6,))_12) ├┤ RZ(f((gamma_6,))_13) ├───┤ H ├─────────┤ X ├──■──»\n",
+      "     ├─────────────────────┤├──────────────────────┤   ├───┤         └───┘┌─┴─┐»\n",
+      "q_7: ┤ RX(f((beta_7,))_14) ├┤ RZ(f((gamma_7,))_15) ├───┤ H ├──────────────┤ X ├»\n",
+      "     └─────────────────────┘└──────────────────────┘   └───┘              └───┘»\n",
+      "c_0: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "c_1: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "c_2: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "c_3: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "c_4: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "c_5: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "c_6: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "c_7: ══════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                               »\n",
+      "«                                                       \n",
+      "«q_0: ──────────────────────────────────────────────────\n",
+      "«                                                       \n",
+      "«q_1: ──────────────────────────────────────────────────\n",
+      "«                                              ┌───┐    \n",
+      "«q_2: ──────────────────────────────────■──────┤ H ├────\n",
+      "«                                     ┌─┴─┐┌───┴───┴───┐\n",
+      "«q_3: ─────────────────────────────■──┤ X ├┤ RX(-pi/2) ├\n",
+      "«                                  │  └───┘└───────────┘\n",
+      "«q_4: ─────────────────────────────┼────────────────────\n",
+      "«                                  │                    \n",
+      "«q_5: ─────────────────────────────┼────────────────────\n",
+      "«                                ┌─┴─┐┌───┐             \n",
+      "«q_6: ────────────────────────■──┤ X ├┤ H ├─────────────\n",
+      "«     ┌────────────────────┐┌─┴─┐├───┤└───┘             \n",
+      "«q_7: ┤ RZ(f((tau_0,))_16) ├┤ X ├┤ H ├──────────────────\n",
+      "«     └────────────────────┘└───┘└───┘                  \n",
+      "«c_0: ══════════════════════════════════════════════════\n",
+      "«                                                       \n",
+      "«c_1: ══════════════════════════════════════════════════\n",
+      "«                                                       \n",
+      "«c_2: ══════════════════════════════════════════════════\n",
+      "«                                                       \n",
+      "«c_3: ══════════════════════════════════════════════════\n",
+      "«                                                       \n",
+      "«c_4: ══════════════════════════════════════════════════\n",
+      "«                                                       \n",
+      "«c_5: ══════════════════════════════════════════════════\n",
+      "«                                                       \n",
+      "«c_6: ══════════════════════════════════════════════════\n",
+      "«                                                       \n",
+      "«c_7: ══════════════════════════════════════════════════\n",
+      "«                                                       \n"
      ]
     }
    ],
@@ -752,6 +791,13 @@
     "circ = tq.circuit.compiler.compile_exponential_pauli_gate(U)\n",
     "tq.draw(circ, backend=\"qiskit\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
