finishing code for H4 and (still) computing LiH eigenvalues

--- a/Project_2_VQE_Molecules/S3_Unitary_Ansatz.ipynb
+++ b/Project_2_VQE_Molecules/S3_Unitary_Ansatz.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,37 +687,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimizer: <class 'tequila.optimizers.optimizer_scipy.OptimizerSciPy'> \n",
-      "backend         : qulacs\n",
-      "samples         : None\n",
-      "save_history    : True\n",
-      "noise           : None\n",
-      "\n",
-      "Method          : BFGS\n",
-      "Objective       : 1 expectationvalues\n",
-      "gradient        : 44 expectationvalues\n",
-      "\n",
-      "active variables : 22\n",
-      "\n",
-      "E=-75.98071144  angles= {gamma_7: 0.0, tau_0: 0.0, gamma_5: 0.0, beta_1: 3.141592653589793, tau_3: 0.0, tau_5: 0.0, tau_4: 0.0, gamma_1: 0.0, beta_0: 3.141592653589793, gamma_3: 0.0, gamma_4: 0.0, beta_5: 0.0, beta_2: 3.141592653589793, beta_4: 0.0, gamma_2: 0.0, beta_7: 0.0, tau_1: 0.0, tau_2: 0.0, gamma_6: 0.0, beta_3: 3.141592653589793, beta_6: 0.0, gamma_0: 0.0}  samples= None\n",
-      "E=-75.98783364  angles= {gamma_7: 0.0, tau_0: 0.07584381103515625, gamma_5: 0.0, beta_1: 3.141592653589793, tau_3: 0.030994415283203125, tau_5: 0.02489471435546875, tau_4: 0.030078887939453125, gamma_1: 0.0, beta_0: 3.141592653589793, gamma_3: 0.0, gamma_4: 0.0, beta_5: 0.0, beta_2: 3.141592653589793, beta_4: 0.0, gamma_2: 0.0, beta_7: 0.0, tau_1: 0.037105560302734375, tau_2: 0.037105560302734375, gamma_6: 0.0, beta_3: 3.141592653589793, beta_6: 0.0, gamma_0: 0.0}  samples= None\n",
-      "E=-75.98857329  angles= {gamma_7: 0.0, tau_0: 0.10182924911229851, gamma_5: 0.0, beta_1: 3.141592653589793, tau_3: 0.04690411561128141, tau_5: 0.0349288019865621, tau_4: 0.04177333199687153, gamma_1: 0.0, beta_0: 3.141592653589793, gamma_3: 0.0, gamma_4: 0.0, beta_5: 0.0, beta_2: 3.141592653589793, beta_4: 0.0, gamma_2: 0.0, beta_7: 0.0, tau_1: 0.05852392400836017, tau_2: 0.05929046375096231, gamma_6: 0.0, beta_3: 3.141592653589793, beta_6: 0.0, gamma_0: 0.0}  samples= None\n",
-      "E=-75.98858260  angles= {gamma_7: 0.0, tau_0: 0.09969372766103793, gamma_5: 0.0, beta_1: 3.141592653589793, tau_3: 0.04783285764604097, tau_5: 0.034615428738700584, tau_4: 0.04149071210908681, gamma_1: 0.0, beta_0: 3.141592653589793, gamma_3: 0.0, gamma_4: 0.0, beta_5: 0.0, beta_2: 3.141592653589793, beta_4: 0.0, gamma_2: 0.0, beta_7: 0.0, tau_1: 0.060473123892992676, tau_2: 0.06154808363690651, gamma_6: 0.0, beta_3: 3.141592653589793, beta_6: 0.0, gamma_0: 0.0}  samples= None\n",
-      "E=-75.98858369  angles= {gamma_7: 0.0, tau_0: 0.09850072062214467, gamma_5: 0.0, beta_1: 3.141592653589793, tau_3: 0.048183794335591834, tau_5: 0.034404300286443194, tau_4: 0.04135121252205053, gamma_1: 0.0, beta_0: 3.141592653589793, gamma_3: 0.0, gamma_4: 0.0, beta_5: 0.0, beta_2: 3.141592653589793, beta_4: 0.0, gamma_2: 0.0, beta_7: 0.0, tau_1: 0.06125613956121948, tau_2: 0.06252892067861264, gamma_6: 0.0, beta_3: 3.141592653589793, beta_6: 0.0, gamma_0: 0.0}  samples= None\n",
-      "Optimization terminated successfully.\n",
-      "         Current function value: -75.988584\n",
-      "         Iterations: 4\n",
-      "         Function evaluations: 5\n",
-      "         Gradient evaluations: 5\n",
-      "\n",
-      "Obtained QCC energy (6 entanglers): -75.9885836880467\n"
+     "ename": "NameError",
+     "evalue": "name 'h2o' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-1c248f262637>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Mean-field part of U (Omega):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mU_MF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconstruct_QMF_ansatz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_qubits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mh2o\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_orbitals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#Entangling part of U:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mU_ENT\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconstruct_QCC_ansatz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentanglers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mU_ENT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'h2o' is not defined"
      ]
     }
    ],
