--- a/Project_2_VQE_Molecules/H4_complete.ipynb
+++ b/Project_2_VQE_Molecules/H4_complete.ipynb
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tequila stuff"
+    "## Step 3: Unitary Ansatz"
    ]
   },
   {
@@ -667,7 +667,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimizer: <class 'tequila.optimizers.optimizer_scipy.OptimizerSciPy'> \n",
+      "backend         : qulacs\n",
+      "samples         : None\n",
+      "save_history    : True\n",
+      "noise           : None\n",
+      "\n",
+      "Method          : BFGS\n",
+      "Objective       : 1 expectationvalues\n",
+      "gradient        : 34 expectationvalues\n",
+      "\n",
+      "active variables : 17\n",
+      "\n",
+      "E=-1.54125526  angles= {beta_0: 3.141592653589793, gamma_0: 0.0, beta_1: 3.141592653589793, gamma_1: 0.0, beta_2: 3.141592653589793, gamma_2: 0.0, beta_3: 3.141592653589793, gamma_3: 0.0, beta_4: 0.0, gamma_4: 0.0, beta_5: 0.0, gamma_5: 0.0, beta_6: 0.0, gamma_6: 0.0, beta_7: 0.0, gamma_7: 0.0, tau_0: 0.0}  samples= None\n",
+      "E=-1.56411492  angles= {beta_0: 3.141592653589793, gamma_0: 0.0, beta_1: 3.141592653589793, gamma_1: 0.0, beta_2: 3.141592653589793, gamma_2: 0.0, beta_3: 3.141592653589793, gamma_3: 0.0, beta_4: 0.0, gamma_4: 0.0, beta_5: 0.0, gamma_5: 0.0, beta_6: 0.0, gamma_6: 0.0, beta_7: 0.0, gamma_7: 0.0, tau_0: 0.15751802921295166}  samples= None\n",
+      "E=-1.59894352  angles= {beta_0: 3.141592653589793, gamma_0: 0.0, beta_1: 3.141592653589793, gamma_1: 0.0, beta_2: 3.141592653589793, gamma_2: 0.0, beta_3: 3.141592653589793, gamma_3: 0.0, beta_4: 0.0, gamma_4: 0.0, beta_5: 0.0, gamma_5: 0.0, beta_6: 0.0, gamma_6: 0.0, beta_7: 0.0, gamma_7: 0.0, tau_0: 0.5069966466067445}  samples= None\n",
+      "E=-1.60881637  angles= {beta_0: 3.141592653589793, gamma_0: 0.0, beta_1: 3.141592653589793, gamma_1: 0.0, beta_2: 3.1415925360000374, gamma_2: 0.0, beta_3: 3.1415925360000374, gamma_3: 0.0, beta_4: 0.0, gamma_4: 0.0, beta_5: 0.0, gamma_5: 0.0, beta_6: 0.0, gamma_6: 0.0, beta_7: 0.0, gamma_7: 0.0, tau_0: 0.8469794853618022}  samples= None\n",
+      "E=-1.60895070  angles= {beta_0: 3.141592653589793, gamma_0: 0.0, beta_1: 3.141592653589793, gamma_1: 0.0, beta_2: 3.141592542083544, gamma_2: 0.0, beta_3: 3.141592542083544, gamma_3: 0.0, beta_4: 0.0, gamma_4: 0.0, beta_5: 0.0, gamma_5: 0.0, beta_6: 0.0, gamma_6: 0.0, beta_7: 0.0, gamma_7: 0.0, tau_0: 0.8113101925402436}  samples= None\n",
+      "E=-1.60895073  angles= {beta_0: 3.141592653589793, gamma_0: 0.0, beta_1: 3.141592653589793, gamma_1: 0.0, beta_2: 3.141592542000603, gamma_2: 0.0, beta_3: 3.141592542000603, gamma_3: 0.0, beta_4: 0.0, gamma_4: 0.0, beta_5: 0.0, gamma_5: 0.0, beta_6: 0.0, gamma_6: 0.0, beta_7: 0.0, gamma_7: 0.0, tau_0: 0.8117964996241631}  samples= None\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: -1.608951\n",
+      "         Iterations: 5\n",
+      "         Function evaluations: 6\n",
+      "         Gradient evaluations: 6\n",
+      "\n",
+      "Obtained QCC energy (1 entanglers): -1.6089507283119515\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Mean-field part of U (Omega):    \n",
+    "U_MF = construct_QMF_ansatz(n_qubits = 2*h4_tq.n_orbitals)\n",
+    "#Entangling part of U:\n",
+    "U_ENT = construct_QCC_ansatz(entanglers)\n",
+    "\n",
+    "U_QCC = U_MF + U_ENT\n",
+    "\n",
+    "E = tq.ExpectationValue(H=H, U=U_QCC)\n",
+    "\n",
+    "initial_vals = init_qcc_params(hf_reference, E.extract_variables())\n",
+    "\n",
+    "#Minimize wrt the entangler amplitude and MF angles:\n",
+    "result = tq.minimize(objective=E, method=\"BFGS\", initial_values=initial_vals, tol=1.e-6)\n",
+    "\n",
+    "print('\\nObtained QCC energy ({} entanglers): {}'.format(len(entanglers), result.energy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -675,6 +730,10 @@
      "output_type": "stream",
      "text": [
       "entanglers [1.0 [X2 Y3 X6 X7]]\n",
+      "circuit: \n",
+      "Exp-Pauli(target=(2, 3, 6, 7), control=(), parameter=tau_0, paulistring=X(2)Y(3)X(6)X(7))\n",
+      "\n",
+      "a: tau_0\n",
       "circuit: \n",
       "Rx(target=(0,), parameter=beta_0)\n",
       "Rz(target=(0,), parameter=gamma_0)\n",
@@ -700,12 +759,56 @@
    "source": [
     "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h4', 2, 'sto-3g', qubit_transf='jw'))\n",
     "print(\"entanglers\", entanglers)\n",
+    "print(construct_QCC_ansatz(entanglers))\n",
     "\n",
     "a = tq.Variable(\"tau_0\")\n",
+    "print(\"a:\", a)\n",
     "U = construct_QMF_ansatz(8)\n",
     "#hardcoding the entanglers\n",
     "U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(\"X(2)Y(3)X(6)X(7)\"), angle=a)\n",
     "print(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.6089507283119502\n"
+     ]
+    }
+   ],
+   "source": [
+    "E = tq.ExpectationValue(H=H, U=U)\n",
+    "vars = {'beta_0': 3.141592653589793, 'gamma_0': 0.0, 'beta_1': 3.141592653589793, 'gamma_1': 0.0, 'beta_2': 3.141592542000603, 'gamma_2': 0.0, 'beta_3': 3.141592542000603, 'gamma_3': 0.0, 'beta_4': 0.0, 'gamma_4': 0.0, 'beta_5': 0.0, 'gamma_5': 0.0, 'beta_6': 0.0, 'gamma_6': 0.0, 'beta_7': 0.0, 'gamma_7': 0.0, 'tau_0': 0.8117964996241631} # values obtained from step 3\n",
+    "print(tq.simulate(E, variables=vars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit import IBMQ\n",
+    "IBMQ.save_account('6f1ae0f74f3b670c62a6a7427dc22eb12f9d6eaa47e5d264218990c42e2593d029d53a92ee9260ce05f0daf11d87a8b1a1114637c90ae648bfabeddca94ae087', overwrite=True)\n",
+    "#IBMQ.enable_account('6f1ae0f74f3b670c62a6a7427dc22eb12f9d6eaa47e5d264218990c42e2593d029d53a92ee9260ce05f0daf11d87a8b1a1114637c90ae648bfabeddca94ae087')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list of devices available can be found in ibmq account page\n",
+    "provider = IBMQ.get_provider(hub='ibm-q-nus', group='default', project='default')\n",
+    "device = provider.get_backend('ibmq_qasm_simulator')\n",
+    "tq.simulate(E, variables=vars, samples=100, backend=\"qiskit\", device=device)#,qiskit_provider = provider) "
    ]
   },
   {
