done with H4, except error with IBM simulation. Done with eigenvalues for LiH

--- a/Project_2_VQE_Molecules/LiH_complete.ipynb
+++ b/Project_2_VQE_Molecules/LiH_complete.ipynb
@@ -809,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tequila stuff"
+    "## Step 3: Unitary Ansatz"
    ]
   },
   {
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,14 @@
       "E=-7.88196450  angles= {(2, 1, 5, 0): -0.00039291218027365406, (5, 1, 2, 1): -0.04800241425913098, (5, 0, 2, 0): -6.940316216011159e-05, (2, 0, 2, 0): -0.003950791815926489, (5, 0, 5, 0): -0.0008449737046125066, (4, 0, 4, 1): 0.002957416956159276, (2, 1, 2, 1): -0.02374167698773399, (2, 0, 5, 0): -6.852359331027494e-05, (3, 1, 3, 1): -0.027450221916690606, (4, 1, 4, 0): 0.002957782685537516, (5, 1, 2, 0): 2.3776369434735378e-06, (3, 0, 3, 1): 0.0029555302101765745, (5, 0, 2, 1): -0.0003929169619929414, (5, 1, 5, 0): 0.0003195229005397025, (4, 0, 4, 0): -0.0017670308194316752, (2, 0, 5, 1): 2.8948484260612616e-06, (4, 1, 4, 1): -0.027460032311141646, (2, 1, 5, 1): -0.04800262728201085, (3, 0, 3, 0): -0.0018470785416890975, (5, 1, 5, 1): -0.10944301721415536, (2, 0, 2, 1): -3.266400190963514e-05, (5, 0, 5, 1): 0.00031972388535757713, (2, 1, 2, 0): -3.15863054370491e-05, (3, 1, 3, 0): 0.0029551010895628206}  samples= None\n",
       "E=-7.88196452  angles= {(2, 1, 5, 0): -0.0004133730307001688, (5, 1, 2, 1): -0.047996922926781406, (5, 0, 2, 0): -6.67569044469478e-05, (2, 0, 2, 0): -0.003950357647518967, (5, 0, 5, 0): -0.0008459418029176849, (4, 0, 4, 1): 0.002954832917795179, (2, 1, 2, 1): -0.02376268424685566, (2, 0, 5, 0): -6.61831819592096e-05, (3, 1, 3, 1): -0.027464512343442538, (4, 1, 4, 0): 0.0029551927970979243, (5, 1, 2, 0): -1.7590080941009184e-05, (3, 0, 3, 1): 0.0029549121199119732, (5, 0, 2, 1): -0.00041356757958937855, (5, 1, 5, 0): 0.00032417070869641447, (4, 0, 4, 0): -0.0018039440742240915, (2, 0, 5, 1): -1.7166821769372522e-05, (4, 1, 4, 1): -0.027474404534629557, (2, 1, 5, 1): -0.04799713432192858, (3, 0, 3, 0): -0.0018118604591060964, (5, 1, 5, 1): -0.10943933629397719, (2, 0, 2, 1): -2.8542791004437103e-05, (5, 0, 5, 1): 0.0003243688400719078, (2, 1, 2, 0): -2.7480324484846583e-05, (3, 1, 3, 0): 0.002954502807553385}  samples= None\n",
       "E=-7.88196452  angles= {(2, 1, 5, 0): -0.0004114995169899133, (5, 1, 2, 1): -0.04800099483287266, (5, 0, 2, 0): -6.736799821625281e-05, (2, 0, 2, 0): -0.003950301850740432, (5, 0, 5, 0): -0.0008452242944024242, (4, 0, 4, 1): 0.0029548973272044204, (2, 1, 2, 1): -0.023744378765509132, (2, 0, 5, 0): -6.674406225937044e-05, (3, 1, 3, 1): -0.027453088847066886, (4, 1, 4, 0): 0.002955197587044257, (5, 1, 2, 0): -1.5525907606476053e-05, (3, 0, 3, 1): 0.0029552139606698114, (5, 0, 2, 1): -0.0004114650019765742, (5, 1, 5, 0): 0.0003242032997914202, (4, 0, 4, 0): -0.001805963791310843, (2, 0, 5, 1): -1.516520551907718e-05, (4, 1, 4, 1): -0.027463239110683522, (2, 1, 5, 1): -0.048001130894007746, (3, 0, 3, 0): -0.0018085479091599686, (5, 1, 5, 1): -0.10944304118118885, (2, 0, 2, 1): -2.8497142822288327e-05, (5, 0, 5, 1): 0.0003244090628338757, (2, 1, 2, 0): -2.741866744625363e-05, (3, 1, 3, 0): 0.002954804285499541}  samples= None\n",
-      "E=-7.88196452  angles= {(2, 1, 5, 0): -0.0004105203129740687, (5, 1, 2, 1): -0.048002597202710794, (5, 0, 2, 0): -6.736300125832637e-05, (2, 0, 2, 0): -0.003950000412362275, (5, 0, 5, 0): -0.000844800042913114, (4, 0, 4, 1): 0.002954930957686958, (2, 1, 2, 1): -0.023735786258235605, (2, 0, 5, 0): -6.700657706870803e-05, (3, 1, 3, 1): -0.02744854286585322, (4, 1, 4, 0): 0.002955313887405978, (5, 1, 2, 0): -1.4378680773114236e-05, (3, 0, 3, 1): 0.002955080474892672, (5, 0, 2, 1): -0.00041039371061205086, (5, 1, 5, 0): 0.00032490165887379135, (4, 0, 4, 0): -0.0018068833281236877, (2, 0, 5, 1): -1.4141801394105931e-05, (4, 1, 4, 1): -0.027458374343688235, (2, 1, 5, 1): -0.048002807147935866, (3, 0, 3, 0): -0.0018069673329767463, (5, 1, 5, 1): -0.10944507489325721, (2, 0, 2, 1): -2.8690917680623597e-05, (5, 0, 5, 1): 0.00032493794918805977, (2, 1, 2, 0): -2.743035722037586e-05, (3, 1, 3, 0): 0.0029546699365259835}  samples= None\n"
+      "E=-7.88196452  angles= {(2, 1, 5, 0): -0.0004105203129740687, (5, 1, 2, 1): -0.048002597202710794, (5, 0, 2, 0): -6.736300125832637e-05, (2, 0, 2, 0): -0.003950000412362275, (5, 0, 5, 0): -0.000844800042913114, (4, 0, 4, 1): 0.002954930957686958, (2, 1, 2, 1): -0.023735786258235605, (2, 0, 5, 0): -6.700657706870803e-05, (3, 1, 3, 1): -0.02744854286585322, (4, 1, 4, 0): 0.002955313887405978, (5, 1, 2, 0): -1.4378680773114236e-05, (3, 0, 3, 1): 0.002955080474892672, (5, 0, 2, 1): -0.00041039371061205086, (5, 1, 5, 0): 0.00032490165887379135, (4, 0, 4, 0): -0.0018068833281236877, (2, 0, 5, 1): -1.4141801394105931e-05, (4, 1, 4, 1): -0.027458374343688235, (2, 1, 5, 1): -0.048002807147935866, (3, 0, 3, 0): -0.0018069673329767463, (5, 1, 5, 1): -0.10944507489325721, (2, 0, 2, 1): -2.8690917680623597e-05, (5, 0, 5, 1): 0.00032493794918805977, (2, 1, 2, 0): -2.743035722037586e-05, (3, 1, 3, 0): 0.0029546699365259835}  samples= None\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: -7.881965\n",
+      "         Iterations: 19\n",
+      "         Function evaluations: 26\n",
+      "         Gradient evaluations: 26\n",
+      "\n",
+      "Obtained UCCSD energy: -7.881964524523219\n"
      ]
     }
    ],
@@ -932,6 +939,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: Measurement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of mutually commuting fragments: 36\n",
+      "The first commuting group\n",
+      "-3.9344419567578965 [] +\n",
+      "0.007923321157850875 [X0 Y1 Y2 X3] +\n",
+      "-0.00015507836015055885 [X0 Z1 Z2 X3 Y4 Y5] +\n",
+      "-0.00207788690266238 [X0 Z1 Z2 X3 Y6 Y7] +\n",
+      "-0.0020778869026623803 [X0 Z1 Z2 X3 Y8 Y9] +\n",
+      "-0.002102865907376202 [X0 Z1 Z2 X3 Y10 Y11] +\n",
+      "0.007923321157850875 [Y0 X1 X2 Y3] +\n",
+      "-0.00015507836015055885 [Y0 Z1 Z2 Y3 X4 X5] +\n",
+      "-0.00207788690266238 [Y0 Z1 Z2 Y3 X6 X7] +\n",
+      "-0.0020778869026623803 [Y0 Z1 Z2 Y3 X8 X9] +\n",
+      "-0.002102865907376202 [Y0 Z1 Z2 Y3 X10 X11] +\n",
+      "0.11709373561826511 [Z0 Z3] +\n",
+      "-0.00015507836015055883 [X1 X2 X4 X5] +\n",
+      "-0.00207788690266238 [X1 X2 X6 X7] +\n",
+      "-0.0020778869026623803 [X1 X2 X8 X9] +\n",
+      "-0.002102865907376202 [X1 X2 X10 X11] +\n",
+      "-0.00015507836015055883 [Y1 Y2 Y4 Y5] +\n",
+      "-0.00207788690266238 [Y1 Y2 Y6 Y7] +\n",
+      "-0.0020778869026623803 [Y1 Y2 Y8 Y9] +\n",
+      "-0.002102865907376202 [Y1 Y2 Y10 Y11] +\n",
+      "0.11709373561826511 [Z1 Z2] +\n",
+      "-0.010590593747757613 [X4 X5 Y6 Y7] +\n",
+      "-0.010590593747757617 [X4 X5 Y8 Y9] +\n",
+      "-0.0067330307808817135 [X4 X5 Y10 Y11] +\n",
+      "-0.010590593747757613 [Y4 Y5 X6 X7] +\n",
+      "-0.010590593747757617 [Y4 Y5 X8 X9] +\n",
+      "-0.0067330307808817135 [Y4 Y5 X10 X11] +\n",
+      "0.08475100244618909 [Z4 Z5] +\n",
+      "-0.004217284878422725 [X6 X7 Y8 Y9] +\n",
+      "-0.003832986432203151 [X6 X7 Y10 Y11] +\n",
+      "-0.004217284878422725 [Y6 Y7 X8 X9] +\n",
+      "-0.003832986432203151 [Y6 Y7 X10 X11] +\n",
+      "0.0782363777898521 [Z6 Z7] +\n",
+      "-0.0038329864322031518 [X8 X9 Y10 Y11] +\n",
+      "-0.0038329864322031518 [Y8 Y9 X10 X11] +\n",
+      "0.07823637778985215 [Z8 Z9] +\n",
+      "0.10993969044870393 [Z10 Z11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "comm_groups = get_commuting_group(lih)\n",
+    "print('Number of mutually commuting fragments: {}'.format(len(comm_groups)))\n",
+    "print('The first commuting group')\n",
+    "print(comm_groups[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is unitary, U * U^+ = I \n"
+     ]
+    }
+   ],
+   "source": [
+    "uqwc = get_qwc_unitary(comm_groups[1])\n",
+    "print('This is unitary, U * U^+ = I ')\n",
+    "print(uqwc * uqwc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qwc = remove_complex(uqwc * comm_groups[1] * uqwc)\n",
+    "print(qwc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uz = get_zform_unitary(qwc)\n",
+    "print(\"Checking whether U * U^+ is identity: {}\".format(uz * uz))\n",
+    "\n",
+    "allz = remove_complex(uz * qwc * uz)\n",
+    "print(\"\\nThe all-z form of qwc fragment:\\n{}\".format(allz))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5: Circuits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -951,7 +1072,7 @@
     "    print('{} : {}'.format(i+1,ranked_entangler_groupings[i][1]))\n",
     "\n",
     "\n",
-    "entanglers = get_QCC_entanglers(ranked_entangler_groupings, n_ents, 2*lih.n_orbitals)\n",
+    "entanglers = get_QCC_entanglers(ranked_entangler_groupings, n_ents, 2*lih_tq.n_orbitals)\n",
     "\n",
     "print('\\nSelected entanglers:')\n",
     "for ent in entanglers:\n",
@@ -964,12 +1085,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Mean-field part of U (Omega):    \n",
+    "U_MF = construct_QMF_ansatz(n_qubits = 2*lih_tq.n_orbitals)\n",
+    "#Entangling part of U:\n",
+    "U_ENT = construct_QCC_ansatz(entanglers)\n",
+    "\n",
+    "U_QCC = U_MF + U_ENT\n",
+    "\n",
+    "E = tq.ExpectationValue(H=H, U=U_QCC)\n",
+    "\n",
+    "initial_vals = init_qcc_params(hf_reference, E.extract_variables())\n",
+    "\n",
+    "#Minimize wrt the entangler amplitude and MF angles:\n",
+    "result = tq.minimize(objective=E, method=\"BFGS\", initial_values=initial_vals, tol=1.e-6)\n",
+    "\n",
+    "print('\\nObtained QCC energy ({} entanglers): {}'.format(len(entanglers), result.energy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('lih', 1.5, 'sto-3g', qubit_transf='jw'))\n",
     "\n",
     "a = tq.Variable(\"tau_0\")\n",
     "U = construct_QMF_ansatz(8)\n",
-    "for ent in entanglers:\n",
-    "    U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(ent), angle=a)\n",
+    "U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(ent), angle=a)\n",
     "print(U)\n"
    ]
   },
@@ -978,7 +1121,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "E = tq.ExpectationValue(H=H, U=U)\n",
+    "vars = {'beta_0': 3.141592653589793, 'gamma_0': 0.0, 'beta_1': 3.141592653589793, 'gamma_1': 0.0, 'beta_2': 3.141592542000603, 'gamma_2': 0.0, 'beta_3': 3.141592542000603, 'gamma_3': 0.0, 'beta_4': 0.0, 'gamma_4': 0.0, 'beta_5': 0.0, 'gamma_5': 0.0, 'beta_6': 0.0, 'gamma_6': 0.0, 'beta_7': 0.0, 'gamma_7': 0.0, 'tau_0': 0.8117964996241631} # values obtained from step 3\n",
+    "print(tq.simulate(E, variables=vars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit import IBMQ\n",
+    "IBMQ.save_account('6f1ae0f74f3b670c62a6a7427dc22eb12f9d6eaa47e5d264218990c42e2593d029d53a92ee9260ce05f0daf11d87a8b1a1114637c90ae648bfabeddca94ae087', overwrite=True)\n",
+    "#IBMQ.enable_account('6f1ae0f74f3b670c62a6a7427dc22eb12f9d6eaa47e5d264218990c42e2593d029d53a92ee9260ce05f0daf11d87a8b1a1114637c90ae648bfabeddca94ae087')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list of devices available can be found in ibmq account page\n",
+    "provider = IBMQ.get_provider(hub='ibm-q', group='open', project='main')\n",
+    "device = provider.get_backend('ibmq_qasm_simulator')\n",
+    "tq.simulate(E, variables=vars, samples=100, backend=\"qiskit\", device=device)#,qiskit_provider = provider) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw\n",
+    "circ = tq.circuit.compiler.compile_exponential_pauli_gate(U)\n",
+    "tq.draw(circ, backend=\"qiskit\")"
+   ]
   }
  ],
  "metadata": {
@@ -986,18 +1167,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
   }
  },
  "nbformat": 4,
